--- a/teacher/block/week01.html
+++ b/teacher/block/week01.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
         <h1>W01 (L01-02) Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
-		<h3>L01 Midweek</h3>
+        <h3>L01 Midweek</h3>
         <p>
           This lesson is all about foundation. All of the tools we will be using
           will be introduced, along with ideas about workflow in modern frontend
@@ -29,30 +29,38 @@
           There is no team activity for this lesson.
         </p>
         <p>
-          Make sure students understand the grading structure. 30% comes
-          from reading and team/individual activities. 70% from self-evaluation and
+          Make sure students understand the grading structure. 30% comes from
+          reading and team/individual activities. 70% from self-evaluation and
           portfolio. The self-evaluation will happen at the end of the semester.
         </p>
         <p>
           Explain the way the course will work. They will be working in groups
           through the whole semester. Those groups need to be formed by midweek.
-          2-3 per group ideally. At midweek, <strong>ensure that each student has self-enrolled in a team activity group and that each group has 2-3 students.</strong> They have been instructed to reach out to you if they have scheduling conflicts. Adjust and/or create groups as needed to put together students who have the same time availability.
-		</p>
-		<p>
-		  You might talk about some of the ideas in the
+          2-3 per group ideally. At midweek,
+          <strong
+            >ensure that each student has self-enrolled in a team activity group
+            and that each group has 2-3 students.</strong
+          >
+          They have been instructed to reach out to you if they have scheduling
+          conflicts. Adjust and/or create groups as needed to put together
+          students who have the same time availability.
+        </p>
+        <p>
+          You might talk about some of the ideas in the
           <a
             href="https://byui-cit.github.io/advcss/resources/working-with-groups.html"
             target="_blank"
             >Working with Groups</a
           >
-          document. The first 9 lessons (4.5 weeks) will be spent modeling what a typical web
-          frontend project might look like. They will work together to build a
-          simple ecommerce site. Some will be done all together in a peer
-          programming model. Other parts will be done individually.
+          document. The first 9 lessons (4.5 weeks) will be spent modeling what
+          a typical web frontend project might look like. They will work
+          together to build a simple ecommerce site. Some will be done all
+          together in a peer programming model. Other parts will be done
+          individually.
         </p>
         <p>
-          The last part of the course will be spent working as teams to design and build a frontend application of
-          the students' choosing.
+          The last part of the course will be spent working as teams to design
+          and build a frontend application of the students' choosing.
         </p>
         <p>
           There is a high emphasis on working effectively as a team in the
@@ -61,52 +69,55 @@
           merge with their projects. You may choose to spend some time talking
           about that in this lesson as well.
         </p>
-		<h3>L02 End-of-Week</h3>
-		<p>
-          The first team activity happens during this lesson. There will be one during most weeks. Groups should have been formed by midweek. 
-		</p>
-		<p>
-		  The team activities are intended to be done in peer programming style. For
-          online you might suggest something like multiplayer in
+        <h3>L02 End-of-Week</h3>
+        <p>
+          The first team activity happens during this lesson. There will be one
+          during most weeks. Groups should have been formed by midweek.
+        </p>
+        <p>
+          The team activities are intended to be done in peer programming style.
+          For online you might suggest something like multiplayer in
           <a href="https://repl.it/" target="_blank" rel="noreferrer"
             >repl.it</a
           >
           to code together, or screen sharing in Teams, Zoom, or Hangouts can
           work as well. The teams need to schedule an hour at some point during
           the week for the team activity. This week is pretty critical as they
-          will be setting up the project they will be working on over the next 4.5
-          weeks and learning how to use it.
+          will be setting up the project they will be working on over the next
+          4.5 weeks and learning how to use it.
         </p>
         <p>
-          Students should start working on the Trello tasks during this lesson as well.
-          They often start slowly. The goal should be for each team to complete
-          one card per team member per lesson (in addition to the team card). For
-          this lesson, however, you might suggest that they work as a team on the
-          "Add item to cart broken" task. They might only get that one card
-          done...and that is probably okay. It will get them into the code to
-          become familiar with it. It also acts as a bit of an icebreaker for
-          the team.
+          Students should start working on the Trello tasks during this lesson
+          as well. They often start slowly. The goal should be for each team to
+          complete one card per team member per lesson (in addition to the team
+          card). For this lesson, however, you might suggest that they work as a
+          team on the "Add item to cart broken" task. They might only get that
+          one card done...and that is probably okay. It will get them into the
+          code to become familiar with it. It also acts as a bit of an
+          icebreaker for the team.
         </p>
         <p>
-          The rest of the cards are intended to be done as individuals...however,
-          I have had groups ask if they can work on all of them together. I have
-          allowed that with the idea that they work towards developing the
-          confidence to complete cards on their own over the next few lessons.
-        </p>
-		<p>
-          Help students to understand that the readings are important and encourage
-          them to also look to other sources when things don't make sense. The
-          book does a pretty good job, but the way it addresses some topics
-          might be confusing to some students. Help them to remember that there
-          are other options. Several are listed in this week's reading in fact.
-          The notes they turn in do not have to all be from the assigned reading.
+          The rest of the cards are intended to be done as
+          individuals...however, I have had groups ask if they can work on all
+          of them together. I have allowed that with the idea that they work
+          towards developing the confidence to complete cards on their own over
+          the next few lessons.
         </p>
         <p>
-          Encourage the students to record their questions while reading
-          and give them to you to be addressed.
+          Help students to understand that the readings are important and
+          encourage them to also look to other sources when things don't make
+          sense. The book does a pretty good job, but the way it addresses some
+          topics might be confusing to some students. Help them to remember that
+          there are other options. Several are listed in this week's reading in
+          fact. The notes they turn in do not have to all be from the assigned
+          reading.
+        </p>
+        <p>
+          Encourage the students to record their questions while reading and
+          give them to you to be addressed.
         </p>
         <h2>Meeting Time</h2>
-		<h3>L01 Midweek</h3>
+        <h3>L01 Midweek</h3>
         <!-- <p>
           For your meeting with them you might consider running through the
           tools they are asked to install. You might even initialize a simple
@@ -219,8 +230,8 @@
             </a>
           </li>
         </ul> -->
-		<h3>L02 End-of-Week</h3>
-<p>
+        <h3>L02 End-of-Week</h3>
+        <p>
           I would spend some time talking about the Node.js based development
           environment we will be working in. Talk about the role of the package
           manager (npm), bundlers (using Snowpack...I know it's not exactly a
@@ -229,9 +240,9 @@
           a bunch of code so debugging looks cleaner), and task managers (npm).
         </p>
         <p>
-          The readings for this lesson are on OOP, this, and modules. So it would be
-          good to model a class based ESModule as well. Discuss DRY and the
-          importance of organizing as part of this.
+          The readings for this lesson are on OOP, this, and modules. So it
+          would be good to model a class based ESModule as well. Discuss DRY and
+          the importance of organizing as part of this.
         </p>
         <p>
           You could code up something like this
@@ -350,7 +361,7 @@
             >random sentence generator as an example</a
           >.
         </p> -->
-	  </main>
+      </main>
       <!-- end #article -->
     </div>
 
