--- a/teacher/block/week02.html
+++ b/teacher/block/week02.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -20,39 +20,49 @@
         <h1>W02 (L03-04) Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
-		<h3>L03 Midweek</h3>
-        <p>The team activity for this lesson will have us start making changes to
+        <h3>L03 Midweek</h3>
+        <p>
+          The team activity for this lesson will have us start making changes to
           the SleepOutside site. We will begin making it dynamic instead of
           static. We start with the product detail page. Currently we have one
           HTML file per product. This is not scalable so we will make one HTML
           page that will load in the details we desire.
-		  </p>
-        <p>The students will also begin adding some structure to the code by
-          creating our first couple modules.
-		  </p>
-		
-		<h3>L04 End-of-Week</h3>
-		<p>The readings for this lesson cover a fairly wide variety of topics, including Debugging, Single Page Applications, and the HTML Template element. Plan on spending some time addressing questions.
-		  </p>
-        <p>The individual activity continues our work at making the site dynamic by
-          addressing the product list on the homepage. It does introduce using
-          a Template element, so you will want to include that in your demo.
-		  </p>
-		  <p>Again with the readings, encourage students to also look to other sources
-          when things don't make sense. The book does a pretty good job, but the
-          way it addresses some topics might be confusing to some students. Help
-          them to remember that there are other options. Several are listed in
-          this week's readings in fact. The notes they turn in do not have to all be from the assigned readings.
-		  </p>
-        <p>Encourage the students to record their questions while reading
-          and give them to you to be addressed.
-		  </p>
-        <h2>Meeting Time</h2>
-		<h3>L03 Midweek</h3>
+        </p>
         <p>
-          Continue to give examples of building
-          dynamic DOM, using events, organizing with modules, and leveraging
-          things like the array methods that JavaScript gives us.
+          The students will also begin adding some structure to the code by
+          creating our first couple modules.
+        </p>
+
+        <h3>L04 End-of-Week</h3>
+        <p>
+          The readings for this lesson cover a fairly wide variety of topics,
+          including Debugging, Single Page Applications, and the HTML Template
+          element. Plan on spending some time addressing questions.
+        </p>
+        <p>
+          The individual activity continues our work at making the site dynamic
+          by addressing the product list on the homepage. It does introduce
+          using a Template element, so you will want to include that in your
+          demo.
+        </p>
+        <p>
+          Again with the readings, encourage students to also look to other
+          sources when things don't make sense. The book does a pretty good job,
+          but the way it addresses some topics might be confusing to some
+          students. Help them to remember that there are other options. Several
+          are listed in this week's readings in fact. The notes they turn in do
+          not have to all be from the assigned readings.
+        </p>
+        <p>
+          Encourage the students to record their questions while reading and
+          give them to you to be addressed.
+        </p>
+        <h2>Meeting Time</h2>
+        <h3>L03 Midweek</h3>
+        <p>
+          Continue to give examples of building dynamic DOM, using events,
+          organizing with modules, and leveraging things like the array methods
+          that JavaScript gives us.
         </p>
         <p>
           You might then do something like this
@@ -129,8 +139,8 @@
           script element...<code>type="module"</code> actually defers it as
           well).
         </p>
-      	<h3>L04 End-of-Week</h3>
-<p>
+        <h3>L04 End-of-Week</h3>
+        <p>
           To help the students prepare for the individual activity you might do
           something like this
           <a href="../examples/sw/index.html" target="_blank"
@@ -198,8 +208,8 @@ when a film is clicked:
           <li>
             Add the code to handle a click on a film. Talk about how we will be
             using the same HTML to output all of the planets for example. In the
-            past we have used functions to generate the HTML, but we could also use
-            a <kbd>template</kbd> in the HTML.
+            past we have used functions to generate the HTML, but we could also
+            use a <kbd>template</kbd> in the HTML.
           </li>
           <li>
             Write the method in SwapiHelper to retrieve the details about a film
@@ -232,9 +242,9 @@ when a film is clicked:
           <li>
             We now need a method to retrieve our template from the HTML, clone
             it, insert the data for a planet, and attach it to the list in the
-            DOM. There is one in the individual activity for this lesson we could use as
-            a model if you think enough students have already completed that by
-            the time you are doing your demo.
+            DOM. There is one in the individual activity for this lesson we
+            could use as a model if you think enough students have already
+            completed that by the time you are doing your demo.
             <kbd>utils/renderListWithTemplate</kbd>. We also need a function to
             insert the planet details into our template clone. Talk about how an
             element can be used to call <code>querySelector</code> to limit our
@@ -252,7 +262,7 @@ when a film is clicked:
             data. Show this with starships if you have time.
           </li>
         </ol>
-	  </main>
+      </main>
       <!-- end #article -->
     </div>
 
