--- a/teacher/block/week03.html
+++ b/teacher/block/week03.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -20,21 +20,21 @@
         <h1>W03 (L05-06) Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
-		<h3>L05 Midweek</h3>
+        <h3>L05 Midweek</h3>
         <p>
-          The individual activity for this lesson is to apply more templating to our
-          site. We will pull the header and footer into files and loaf
-          them in with JavaScript.
+          The individual activity for this lesson is to apply more templating to
+          our site. We will pull the header and footer into files and loaf them
+          in with JavaScript.
         </p>
         <p>
-          The teams for the final project should meet before midweek to brainstorm and submit a list of project ideas. Help them navigate scope!
+          The teams for the final project should meet before midweek to
+          brainstorm and submit a list of project ideas. Help them navigate
+          scope!
         </p>
-		<h3>L06 End-of-Week</h3>
-		<p>
-          The reading for this lesson is on forms.
-        </p>
+        <h3>L06 End-of-Week</h3>
+        <p>The reading for this lesson is on forms.</p>
         <h2>Meeting Time</h2>
-		<h3>L05 Midweek</h3>
+        <h3>L05 Midweek</h3>
         <p>
           For this meeting I would recommend spending a lot of time on
           debugging. You could use this project
@@ -46,10 +46,10 @@
           >
         </p>
         <p>
-          Have them download it, run it, and start finding and eliminating
-          bugs. You could do the first few together then turn them loose on
-          some...or stay together...up to you. Emphasize a few things that
-          students seem to struggle with:
+          Have them download it, run it, and start finding and eliminating bugs.
+          You could do the first few together then turn them loose on some...or
+          stay together...up to you. Emphasize a few things that students seem
+          to struggle with:
         </p>
         <ol>
           <li>
@@ -76,20 +76,20 @@
             it and using try/catch blocks to deal with errors more gracefully.
           </li>
         </ol>
-      	<h3>L06 End-of-Week</h3>
-<p>
-          This demo should review custom request headers, forms, and
-          making POST requests instead of the simple GETs we have been doing. We
-          do need some sort of a backend to do this though...this will require
-          some special setup...see below.
+        <h3>L06 End-of-Week</h3>
+        <p>
+          This demo should review custom request headers, forms, and making POST
+          requests instead of the simple GETs we have been doing. We do need
+          some sort of a backend to do this though...this will require some
+          special setup...see below.
         </p>
         <p>
           ...And here is a link to the project...<a
             href="https://github.com/byui-cit/wdd330/tree/main/examples/blog"
             target="_blank"
             >simple blog</a
-          >. The link this lesson is to the repo...it won't function if the server
-          part is not running...
+          >. The link this lesson is to the repo...it won't function if the
+          server part is not running...
         </p>
         <ol>
           <li>
@@ -224,7 +224,7 @@ function formDataToJSON(formElement) {
           </code></pre>
           </li>
         </ol>
-	  </main>
+      </main>
       <!-- end #article -->
     </div>
 
