--- a/teacher/block/week04.html
+++ b/teacher/block/week04.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -20,47 +20,48 @@
         <h1>W04 (L07-08) Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
-		<h3>L07 Midweek</h3>
+        <h3>L07 Midweek</h3>
         <p>
-          The individual activity for this lesson asks the students to finish the
-          checkout process. They will need to create a checkout form, then
+          The individual activity for this lesson asks the students to finish
+          the checkout process. They will need to create a checkout form, then
           submit the correct information to a server. The server lives at
           <a href="http://157.201.228.93:2992/" target="_blank" rel="noreferrer"
             >http://157.201.228.93:2992/</a
           >. Check to make sure it is up!
         </p>
-		<h3>L08 End-of-Week</h3>
-		<p>The team activity for this lesson is a continuation of the last activity. The
-          students should have successfully submitted an order to the server,
-          but we did not handle the response, or deal with validation to make
-          sure the user gives us good information.
+        <h3>L08 End-of-Week</h3>
+        <p>
+          The team activity for this lesson is a continuation of the last
+          activity. The students should have successfully submitted an order to
+          the server, but we did not handle the response, or deal with
+          validation to make sure the user gives us good information.
         </p>
         <p>
-          The reading for this lesson introduces JSON Web Tokens (JWT). The individual
-          activity in the next lesson will address authentication.
+          The reading for this lesson introduces JSON Web Tokens (JWT). The
+          individual activity in the next lesson will address authentication.
         </p>
         <p>
           Remind the students that their project proposals are due this week.
         </p>
         <p>
-          Encourage the students to record their questions while reading
-          and give them to you to be addressed.
+          Encourage the students to record their questions while reading and
+          give them to you to be addressed.
         </p>
         <h2>Meeting Time</h2>
         <h3>L07 Midweek</h3>
-		<p>
+        <p>
           The reading for this lesson introduces CSS transitions and animations.
-          As an example, I often use 
+          As an example, I often use
           <a
             href="https://codepen.io/matkat/pen/EKaNZg"
             target="_blank"
             rel="noreferrer"
             >these boxes</a
           >
-          to start and will change them (transform, size, shape, color, location) with
-          transitions to demo the basics. I'll finish with a bouncing ball or
-          make a box go around the content div (slide corner to corner all the
-          way around). Then you might build something like this:
+          to start and will change them (transform, size, shape, color,
+          location) with transitions to demo the basics. I'll finish with a
+          bouncing ball or make a box go around the content div (slide corner to
+          corner all the way around). Then you might build something like this:
           <a href="../examples/poke-animation/poketest.html" target="_blank"
             >PokeApi Demo with animation</a
           >
@@ -89,8 +90,8 @@
       slide list and details 100vw right
 */
         </pre>
-      <h3>L08 End-of-Week</h3>
-	  <p>
+        <h3>L08 End-of-Week</h3>
+        <p>
           For your meeting it might be helpful to grab a Trello card from the
           SleepOutside project and work on it together with the students. Model
           especially the planning phase as students often struggle getting
@@ -100,7 +101,7 @@
           Alternatively, you could model requesting a token with a
           username/password and using it in requests.
         </p>
-	  </main>
+      </main>
       <!-- end #article -->
     </div>
 
