--- a/teacher/block/week05.html
+++ b/teacher/block/week05.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -20,19 +20,20 @@
         <h1>W05 (L09-10) Instructor Preparation</h1>
         <hr />
         <h2>Overview</h2>
-		<h3>L09 Midweek</h3>
+        <h3>L09 Midweek</h3>
         <p>
-          The individual activity for this lesson will have the students create a simple
-          Administrative section of the site that will require authentication to
-          access. This is the last activity of working with the SleepOutside project.
+          The individual activity for this lesson will have the students create
+          a simple Administrative section of the site that will require
+          authentication to access. This is the last activity of working with
+          the SleepOutside project.
         </p>
-		<h3>L10 End-of-Week</h3>
+        <h3>L10 End-of-Week</h3>
         <p>
-          Remind students that in the second half of this week they will begin working with their teams on their final
-          project.
+          Remind students that in the second half of this week they will begin
+          working with their teams on their final project.
         </p>
         <h2>Meeting Time</h2>
-		<h3>L09 Midweek</h3>
+        <h3>L09 Midweek</h3>
         <p>
           The readings introduced several of the HTML APIs and Canvas. It could
           be fun to model several of those. (Quakes demo?)
@@ -257,14 +258,13 @@ function loopy(ms) {
             code and figure out how it all works.
           </li>
         </ol>
-		<h3>L10 End-of-Week</h3>
-		<p>You could use part of your meeting for questions on projects.</p>
+        <h3>L10 End-of-Week</h3>
+        <p>You could use part of your meeting for questions on projects.</p>
         <p>
           This could be a great opportunity to talk about trying to make sense
           of API documentation. Also discuss using the
           <kbd>.gitignore</kbd> file to protect things like API keys.
         </p>
-
       </main>
       <!-- end #article -->
     </div>
