--- a/teacher/block/week06.html
+++ b/teacher/block/week06.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -21,13 +21,13 @@
         <hr />
         <h2>Overview</h2>
         <p>
-          Remind students that they should be working with their team on their final project. They should plan on spending all of their time working on their project.
+          Remind students that they should be working with their team on their
+          final project. They should plan on spending all of their time working
+          on their project.
         </p>
         <h2>Meeting Time</h2>
 
-        <p>
-          This week you should use your meeting for questions on projects.
-        </p>
+        <p>This week you should use your meeting for questions on projects.</p>
       </main>
       <!-- end #article -->
     </div>
