--- a/teacher/block/week07.html
+++ b/teacher/block/week07.html
@@ -5,7 +5,7 @@
     <title>BYU-Idaho WDD 330 | Instructor Preparation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/prism-coy.css" />
-    <link rel="stylesheet" href="../css/course.css" />
+    <link rel="stylesheet" href="../../css/course.css" />
   </head>
 
   <body>
@@ -22,16 +22,18 @@
         <h2>Overview</h2>
 
         <p>
-          Final week. By the end of this week, students should have their final project finished. They
-          should also prepare a ~3 minute video reviewing how they evaluated
-          themselves on the outcomes, and showing justification from their
-          portfolios for their self-ratings. Review their ratings, video, and if
-          necessary portfolio. If you agree with the self-assessment, then award
-          that grade...if not, adjust as necessary.
+          Final week. By the end of this week, students should have their final
+          project finished. They should also prepare a ~3 minute video reviewing
+          how they evaluated themselves on the outcomes, and showing
+          justification from their portfolios for their self-ratings. Review
+          their ratings, video, and if necessary portfolio. If you agree with
+          the self-assessment, then award that grade...if not, adjust as
+          necessary.
         </p>
         <p>
           Remember that this grade will count for 70% of the final grade. The
-          other 30% comes from the weekly readings and individual/team activities.
+          other 30% comes from the weekly readings and individual/team
+          activities.
         </p>
       </main>
       <!-- end #article -->
