trello block edits

--- a/ponder/week02-trello-block.html
+++ b/ponder/week02-trello-block.html
@@ -29,13 +29,14 @@
         <p>
           There are some tasks marked "Team" and others that are not. Each week
           the team should complete the appropriate team activity together. The
-          goal is then to complete one additional card per team member per lesson (two each week).
-          These should be done individually as much as possible, but remember
-          that you have a team to help you if you get stuck on a particular
-          task.
+          goal is then to complete one additional card per team member per
+          lesson (two each week). These should be done individually as much as
+          possible, but remember that you have a team to help you if you get
+          stuck on a particular task.
         </p>
         <p>
-          In order to demonstrate how this should work it is recommended that each member of the team complete the same card for this first time.
+          In order to demonstrate how this should work it is recommended that
+          each member of the team complete the same card for this first time.
           <strong
             >After this week each member should complete different cards</strong
           >.
@@ -136,9 +137,14 @@
               can be closed without merging. Finally someone should move the
               Trello card to "Done".
             </p>
-            <p>From here on you should follow this process with each of the Trello tasks you complete:</p>
+            <p>
+              From here on you should follow this process with each of the
+              Trello tasks you complete:
+            </p>
             <ol>
-              <li>Choose a Trello card, assign yourself to it, and move to "Doing"</li>
+              <li>
+                Choose a Trello card, assign yourself to it, and move to "Doing"
+              </li>
               <li>Make a branch</li>
               <li>Complete the work</li>
               <li>Lint and format</li>
@@ -147,8 +153,8 @@
               <li>Make a pull request for your branch</li>
               <li>Let your group know there is a pull request waiting</li>
               <li>
-                Another team member should review the pull request in GitHub and,
-                if everything looks good, Merge the request. I would also
+                Another team member should review the pull request in GitHub
+                and, if everything looks good, Merge the request. I would also
                 recommend deleting the old branch as part of that process as
                 well.
               </li>
