--- a/ponder/week02-trello.html
+++ b/ponder/week02-trello.html
@@ -22,8 +22,8 @@
         <p>
           Each team should have made a copy of this
           <a href="https://trello.com/b/LO93bmJy/sleepoutside" target="_blank"
-            >trello board</a
-          >. This is a shared board that you will all be working off of over the
+            >Trello board</a
+          >. This is a shared board that you will all be working from over the
           semester.
         </p>
         <p>
@@ -36,8 +36,7 @@
         </p>
         <p>
           In order to demonstrate how this should work it is recommended that
-          the each member of the team complete the same card for this first
-          time.
+          each member of the team complete the same card for this first time.
           <strong
             >After this week each member should complete different cards</strong
           >.
@@ -54,11 +53,11 @@
             <p>
               Visit the team's copy of the Trello board for the project. Add
               yourself to the "Add item to cart broken" task...then move it to
-              'Doing' (if the card is already in 'Doing' then just add
+              "Doing" (if the card is already in "Doing" then just add
               yourself). Read the details of the card.
             </p>
             <p>
-              Make sure to <kbd>pull</kbd> any changes from Github before
+              Make sure to <kbd>pull</kbd> any changes from GitHub before
               proceeding. Next create a new branch called
               <kbd>initials--add cart broken</kbd>. So if the name name were
               John Doe the branch should be called
@@ -80,7 +79,7 @@
               place in the browser where a website can keep things. LocalStorage
               works like cookies, in that it will persist until a user clears
               their browser cache, but you can store more information there. To
-              see what is curerntly stored in your browser's localStorage go to
+              see what is currently stored in your browser's localStorage go to
               the Application tab if you are in Chrome dev tools. Then on the
               side select "Local Storage->http://127.0.0.1". Notice there should
               be something there...you can clear out the contents of the storage
@@ -107,7 +106,7 @@
                 <li>
                   Remember that you can set breakpoints to stop your code and
                   inspect it. Do this. (Sources tab, open a JS file. Click on
-                  the line number where you want the breakpoint) It is also a
+                  the line number where you want the breakpoint.) It is also a
                   good way to figure out how everything is put together.
                 </li>
                 <li>
@@ -123,7 +122,7 @@
           <li>
             <h2>Make a pull request.</h2>
             <p>
-              After you have completed the card and have things working you
+              After you have completed the card and have things working, you
               should commit and push your changes (don't forget to lint and
               format your code before committing!), then submit a pull request
               for this branch.
@@ -138,26 +137,28 @@
               can be closed without merging. Finally someone should move the
               Trello card to "Done".
             </p>
-            <p>From here on you should follow the process of:</p>
+            <p>
+              From here on you should follow this process with each of the
+              Trello tasks you complete:
+            </p>
             <ol>
               <li>
-                Choose a Trello card, assign yourself to it, and move to 'Doing'
+                Choose a Trello card, assign yourself to it, and move to "Doing"
               </li>
               <li>Make a branch</li>
               <li>Complete the work</li>
               <li>Lint and format</li>
               <li>Commit and push</li>
-              <li>Move the Trello card to 'Done'</li>
+              <li>Move the Trello card to "Done"</li>
               <li>Make a pull request for your branch</li>
               <li>Let your group know there is a pull request waiting</li>
               <li>
-                Another team member should review the pull request in Github and
-                if everything looks good Merge the request. I would also
+                Another team member should review the pull request in GitHub
+                and, if everything looks good, Merge the request. I would also
                 recommend deleting the old branch as part of that process as
                 well.
               </li>
             </ol>
-            <p>with each of the Trello tasks you complete.</p>
           </li>
         </ol>
       </main>
