--- a/prepare/week01.html
+++ b/prepare/week01.html
@@ -201,7 +201,7 @@
           <li>
             Complete the
             <a
-              href="../resources/course-setup-block.html"
+              href="../resources/course-setup.html"
               target="_blank"
               rel="noreferrer"
               >Course Setup</a
