update reading links

--- a/resources/syllabus-outside.html
+++ b/resources/syllabus-outside.html
@@ -11,7 +11,7 @@
   <body>
     <div id="content">
       <main>
-        <h1>Syllabus</h1>
+        <h1>WDD 330 Syllabus</h1>
         <hr />
 
         <h2>Description</h2>
