swapi example edits

--- a/teacher/week04.html
+++ b/teacher/week04.html
@@ -38,11 +38,60 @@
         </p>
         <p>
           Also this week you should coordinate with the CSE 341 instructor if
-          you are doing hte cross course team project. The teams should be
+          you are doing the cross course team project. The teams should be
           formed this week so the students can meet next week
         </p>
         <h2>Meeting Time</h2>
+        <p>
+          This week might be a good week to spend a bit of time on CSS, along
+          with hardening code. You could start by giving the students this
+          javascript module:
+          <a
+            href="https://byui-cit.github.io/wdd330/examples/sw/styled/SwapiHelper.js"
+            >SwapiHelper.js</a
+          >. Begin by opening it up in your editor and walk through a few things
+          with them. Note the try/catch blocks in some of the functions. Explain
+          a bit about them.
+        </p>
+        <p>
+          Point out as well in the <code>getListDetails</code> function the use
+          of Promise.all()
+        </p>
+        <p>
+          This shows an alternate form of templating as well to that which we
+          looked at last week with the template element. It has functions which
+          return an HTML string with the appropriate data embedded.
+        </p>
+        <p>
+          Talk about the <code>renderList</code> function and the use of a
+          template callback to make it work.
+        </p>
+        <p>
+          You might also talk about the <code>.bind(this)</code> in the init
+          function as well.
+        </p>
+        <p>
+          Once you have pointed out a few things instruct the students to create
+          <kbd>index.html</kbd> and <kbd>main.js</kbd> files. Then have them
+          write the HTML and JS code necessary to get the module to work.
+        </p>
+        <p>
+          After they get the module working spend the rest of the time writing
+          some CSS for the page to dress it up. Basic layout would be
+          good...adding margin and padding to give whitespace, then consider
+          writing an animation for the loading message.
+        </p>
+        <p>
+          Here is an
+          <a href="https://byui-cit.github.io/wdd330/examples/sw/styled"
+            >example</a
+          >. I just grabbed a random color scheme...so don't judge :) I also
+          wanted to keep it simple enough that you could get it done fairly
+          quickly.
+        </p>
 
+        <h2>Alternate!</h2>
+        <p>Another option would be to write the module with the students...</p>
         <p>
           To help the students prepare for the team activity you might do
           something like this
